--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ button {
 function check() {
   let p = document.getElementById("pass").value;
 
-  if (p === "firstdate") {  
+  if (p === "gugugaga") {  
     window.location.href = "universe.html";
   } else {
     alert("Wrong password ❤️");
