--- a/universe.html
+++ b/universe.html
@@ -48,7 +48,7 @@ p {
 <body>
 
 <div class="center">
-  <h1>Your Name ❤️</h1>
+  <h1>Priyanshi❤️</h1>
   <p>You are my favorite place in this universe.</p>
 </div>
 
