--- a/universe.html
+++ b/universe.html
@@ -195,6 +195,19 @@ section {
   transform: scale(1.08);
   box-shadow: 0 10px 30px rgba(192,132,252,0.7);
 }
+
+  .hero * {
+  position: relative;
+  z-index: 2;
+}
+
+.glow {
+  z-index: 0;
+}
+
+.polaroid {
+  z-index: 1;
+}
 </style>
 </head>
 
