--- a/universe.html
+++ b/universe.html
@@ -217,12 +217,12 @@ section {
 <body>
 
 <header>
-  <div class="logo">For You 💜</div>
+  <div class="logo">PiyuCore 💜</div>
   <nav>
-    <a href="#journey">Our Journey</a>
-    <a href="#memories">Memories</a>
-    <a href="#her">My Favourite</a>
-    <a href="#songs">Songs</a>
+    <a href="#journey">The Journey Of The King & Queen</a>
+    <a href="#memories">Good Pictures</a>
+    <a href="#her">My Favourites!!</a>
+    <a href="#songs">Our Tunes</a>
   </nav>
 </header>
 
