--- a/universe.html
+++ b/universe.html
@@ -232,10 +232,10 @@ section {
   <div class="glow"></div>
 
   <!-- POLAROID PHOTOS -->
-  <div class="polaroid p1"><img src="photo1.jpg"></div>
-  <div class="polaroid p2"><img src="photo2.jpg"></div>
-  <div class="polaroid p3"><img src="photo3.jpg"></div>
-  <div class="polaroid p4"><img src="photo4.jpg"></div>
+  <div class="polaroid p1"><img src="image1.HEIC"></div>
+  <div class="polaroid p2"><img src="image2.png"></div>
+  <div class="polaroid p3"><img src="image3"></div>
+  <div class="polaroid p4"><img src="image4.jpg"></div>
 
   <h1>Priyanshi ❤️</h1>
   <p>You are my favourite place in this universe.</p>
