--- a/universe.html
+++ b/universe.html
@@ -233,9 +233,9 @@ section {
 
   <!-- POLAROID PHOTOS -->
   <div class="polaroid p1"><img src="image1.HEIC"></div>
-  <div class="polaroid p2"><img src="image2.png"></div>
-  <div class="polaroid p3"><img src="image3"></div>
-  <div class="polaroid p4"><img src="image4.jpg"></div>
+  <div class="polaroid p2"><img src="image2.PNG"></div>
+  <div class="polaroid p3"><img src="image3.JPG"></div>
+  <div class="polaroid p4"><img src="image4.JPG"></div>
 
   <h1>Priyanshi ❤️</h1>
   <p>You are my favourite place in this universe.</p>
