--- a/birthday.html
+++ b/birthday.html
@@ -115,7 +115,7 @@ button {
   <button onclick="blow()">Blow</button>
 
   <div class="message" id="msg">
-    Happy Birthday Priyanshi 💜
+    Happy Birthday Piyu
   </div>
 </div>
 
