--- a/universe.html
+++ b/universe.html
@@ -232,7 +232,7 @@ section {
   <div class="glow"></div>
 
   <!-- POLAROID PHOTOS -->
-  <div class="polaroid p1"><img src="image1.HEIC"></div>
+  <div class="polaroid p1"><img src="image1.jpg"></div>
   <div class="polaroid p2"><img src="image2.PNG"></div>
   <div class="polaroid p3"><img src="image3.JPG"></div>
   <div class="polaroid p4"><img src="image4.JPG"></div>
