--- a/birthday.html
+++ b/birthday.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Birthday 💜</title>
+<title>Happy Birthday ❤️</title>
 
 <style>
 body {
@@ -103,7 +103,7 @@ button {
 <body>
 
 <div class="container">
-  <h2>Make a Wish 💜</h2>
+  <h2>Make a Wish ❤️</h2>
 
   <div class="cake" id="cake">
     <div class="layer"></div>
