--- a/universe.html
+++ b/universe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For You 💜</title>
+<title>For You ❤️</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
 <style>
@@ -217,7 +217,7 @@ section {
 <body>
 
 <header>
-  <div class="logo">PiyuCore 💜</div>
+  <div class="logo">PiyuCore ❤️</div>
   <nav>
     <a href="#journey">The Journey Of The King & Queen</a>
     <a href="#memories">Good Pictures</a>
@@ -292,12 +292,12 @@ let startDate = new Date("2024-01-04"); // change this
 let today = new Date();
 let diff = Math.floor((today - startDate)/(1000*60*60*24));
 document.getElementById("days").innerHTML =
-"We have been together for " + diff + " days 💜";
+"We have been together for " + diff + " days ❤️";
 
 /* floating hearts */
 setInterval(() => {
   let h = document.createElement("div");
-  h.innerHTML = "💜";
+  h.innerHTML = "❤️";
   h.style.position = "fixed";
   h.style.left = Math.random()*100 + "vw";
   h.style.bottom = "-20px";
