--- a/universe.html
+++ b/universe.html
@@ -329,7 +329,7 @@ setInterval(() => {
   w.style.top = Math.random()*100 + "vh";
   w.style.opacity = "0.12";
   w.style.fontSize = "30px";
-  w.style.color = "#7c3aed";
+  w.style.color = "#8B0000";
   w.style.pointerEvents = "none";
   w.style.transition = "8s";
   document.body.appendChild(w);
