--- a/universe.html
+++ b/universe.html
@@ -127,6 +127,10 @@ nav a:hover {
 .p2 { top: 18%; right: 10%; transform: rotate(6deg); }
 .p3 { bottom: 18%; left: 12%; transform: rotate(5deg); }
 .p4 { bottom: 12%; right: 12%; transform: rotate(-7deg); }
+.p5 { top: 35%; left: 5%; transform: rotate(4deg); }
+.p6 { top: 40%; right: 6%; transform: rotate(-5deg); }
+.p7 { top: 55%; left: 20%; transform: rotate(-6deg); }
+.p8 { top: 60%; right: 22%; transform: rotate(7deg); }
 
 @media (max-width: 768px) {
   .polaroid { display: none; }
@@ -236,6 +240,10 @@ section {
   <div class="polaroid p2"><img src="image2.PNG"></div>
   <div class="polaroid p3"><img src="image3.JPG"></div>
   <div class="polaroid p4"><img src="image4.JPG"></div>
+  <div class="polaroid p5"><img src="photo5.jpg"></div>
+  <div class="polaroid p6"><img src="photo6.jpg"></div>
+  <div class="polaroid p7"><img src="photo7.jpg"></div>
+  <div class="polaroid p8"><img src="photo8.jpg"></div>
 
   <h1>Priyanshi ❤️</h1>
   <p>You are my favourite place in this universe.</p>
