--- a/birthday.html
+++ b/birthday.html
@@ -17,7 +17,11 @@ body {
 }
 
 .container {
-  text-align: center;
+  display: flex;
+  justify-content: center; /* Centers text horizontally */
+  align-items: center;     /* Centers text vertically */
+  height: 300px;           /* Example height for the container */
+  position: relative;      /* Required for positioning the child */
 }
 
 /* Cake */
