--- a/universe.html
+++ b/universe.html
@@ -257,10 +257,13 @@ section {
 <section id="journey">
   <h2>Our Journey 💫</h2>
   <div class="timeline">
-    <div>The first time we talked 💬</div>
-    <div>Our first date 🌸</div>
-    <div>The moment I realised I love you 💖</div>
-  </div>
+    <div>The first time we talked 💬
+      We talked for the first time and I still remember that you did not instantly talk good with me but
+      I do remember that it was not good but here we are, you're 18 now and its all magical.
+    </div>
+    <div>Our first date 🌸
+      We had many dates but the first and proper I remember was our one monthiversary, it was magical with the gifts exchange and now when i look back it, I see how far we have come.
+    </div>
 </section>
 
 <!-- MEMORIES -->
