--- a/universe.html
+++ b/universe.html
@@ -240,10 +240,10 @@ section {
   <div class="polaroid p2"><img src="image2.PNG"></div>
   <div class="polaroid p3"><img src="image3.JPG"></div>
   <div class="polaroid p4"><img src="image4.JPG"></div>
-  <div class="polaroid p5"><img src="photo5.jpg"></div>
-  <div class="polaroid p6"><img src="photo6.jpg"></div>
-  <div class="polaroid p7"><img src="photo7.jpg"></div>
-  <div class="polaroid p8"><img src="photo8.jpg"></div>
+  <div class="polaroid p5"><img src="IMG_6114.jpg"></div>
+  <div class="polaroid p6"><img src="IMG_7617.jpg"></div>
+  <div class="polaroid p7"><img src="IMG_7619.jpg"></div>
+  <div class="polaroid p8"><img src="IMG_7620.jpg"></div>
 
   <h1>Priyanshi ❤️</h1>
   <p>You are my favourite place in this universe.</p>
@@ -270,8 +270,14 @@ section {
 <section id="memories">
   <h2>Memories 💕</h2>
   <div class="gallery">
-    <img src="mem1.jpg">
-    <img src="mem2.jpg">
+    <img src="lp_image.jpg">
+    <img src="lp_image_2.jpg">
+    <img src="lp_image_3.jpg">
+    <img src="lp_image_4.jpg">
+    <img src="lp_image_4.jpg">
+    <img src="lp_image_5.jpg">
+    <img src="IMG_8991.JPG">
+    <img src="IMG_9770.JPG">
   </div>
 </section>
 
