--- a/universe.html
+++ b/universe.html
@@ -215,6 +215,72 @@ section {
   .glow {
   pointer-events: none;
 }
+
+/* GRAND SECTION */
+.grand {
+  background: rgba(255,255,255,0.2);
+  backdrop-filter: blur(20px);
+  border-radius: 30px;
+}
+
+.grand-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 30px;
+  margin-top: 40px;
+}
+
+.big-card, .small-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.big-card img, .small-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.big-card {
+  height: 420px;
+}
+
+.small-card {
+  height: 420px;
+}
+
+/* overlay */
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 25px;
+  background: linear-gradient(transparent, rgba(0,0,0,0.7));
+  color: white;
+  transform: translateY(60%);
+  transition: 0.5s;
+}
+
+.big-card:hover img,
+.small-card:hover img {
+  transform: scale(1.1);
+}
+
+.big-card:hover .overlay,
+.small-card:hover .overlay {
+  transform: translateY(0);
+}
+
+/* mobile */
+@media (max-width: 768px) {
+  .grand-container {
+    grid-template-columns: 1fr;
+  }
+}
 </style>
 </head>
 
@@ -282,20 +348,29 @@ section {
 </section>
 
 <!-- HER -->
-<section id="her">
+<section id="her" class="grand">
   <h2>My Favourite 💜</h2>
-  <div class="gallery">
-    <div class="card">
-      <img src="her1.jpg">
-      <span>This smile saved me 💜</span>
+
+  <div class="grand-container">
+
+    <div class="big-card">
+      <img src="lp_image_6.jpg">
+      <div class="overlay">
+        <h3>This smile saved me</h3>
+        <p>You are my peace, my comfort, my forever.</p>
+      </div>
     </div>
-    <div class="card">
-      <img src="her2.jpg">
-      <span>Still not over this day ✨</span>
+
+    <div class="small-card">
+      <img src="IMG_5552.jpg">
+      <div class="overlay">
+        <h3>Still not over this day</h3>
+        <p>Every version of you is my favourite.</p>
+      </div>
     </div>
+
   </div>
 </section>
-
 <!-- SONGS -->
 <section id="songs">
   <h2>Songs That Remind Me of You 🎧</h2>
