--- a/universe.html
+++ b/universe.html
@@ -281,6 +281,64 @@ section {
     grid-template-columns: 1fr;
   }
 }
+
+/* RETRO SONG SECTION */
+.retro {
+  text-align: center;
+}
+
+.cd-player {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 40px;
+}
+
+/* CD */
+.cd {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #f0abfc, #7c3aed);
+  position: relative;
+  animation: spin 6s linear infinite;
+  animation-play-state: paused;
+}
+
+/* hole */
+.cd::after {
+  content: "";
+  width: 40px;
+  height: 40px;
+  background: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
+/* buttons */
+.song-list button {
+  display: block;
+  margin: 10px 0;
+  padding: 10px 18px;
+  border: none;
+  background: #a78bfa;
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.song-list button:hover {
+  background: #7c3aed;
+}
 </style>
 </head>
 
@@ -372,11 +430,23 @@ section {
   </div>
 </section>
 <!-- SONGS -->
-<section id="songs">
-  <h2>Songs That Remind Me of You 🎧</h2>
-  <a href="#">Song 1</a>
-  <a href="#">Song 2</a>
+<section id="songs" class="retro">
+  <h2>Songs dedicated to Piyu 🎧</h2>
+
+  <div class="cd-player">
+
+    <div class="cd" id="cd"></div>
+
+    <div class="song-list">
+      <button onclick="playSong('song1.mp3')"></button>
+      <button onclick="playSong('song2.mp3')"></button>
+      <button onclick="playSong('song3.mp3')"></button>
+    </div>
+
+  </div>
 </section>
+
+<audio id="player"></audio>
 
 <script>
 /* DAYS COUNTER */
@@ -473,6 +543,17 @@ document.addEventListener("mousemove",(e)=>{
   cursor.style.left=e.clientX+"px";
   cursor.style.top=e.clientY+"px";
 });
+</script>
+
+<script>
+let audio = document.getElementById("player");
+let cd = document.getElementById("cd");
+
+function playSong(song) {
+  audio.src = song;
+  audio.play();
+  cd.style.animationPlayState = "running";
+}
 </script>
 
 </body>
