--- a/universe.html
+++ b/universe.html
@@ -438,7 +438,7 @@ section {
     <div class="cd" id="cd"></div>
 
     <div class="song-list">
-      <button onclick="playSong('song1.mp3')"></button>
+      <button onclick="playSong('mulaqat.mp3')"></button>
       <button onclick="playSong('song2.mp3')"></button>
       <button onclick="playSong('song3.mp3')"></button>
     </div>
