--- a/universe.html
+++ b/universe.html
@@ -439,8 +439,8 @@ section {
 
     <div class="song-list">
       <button onclick="playSong('mulaqat.mp3')">Our first one</button>
-      <button onclick="playSong('song2.mp3')"></button>
-      <button onclick="playSong('song3.mp3')"></button>
+      <button onclick="playSong('kauntujhe.mp3')">Who Else?</button>
+      <button onclick="playSong('dekhahinahi.mp3')">Never Seen One Like You</button>
     </div>
 
   </div>
