--- a/universe.html
+++ b/universe.html
@@ -372,6 +372,36 @@ section {
     flex-direction: column;
   }
 }
+
+/* montage */
+.montage {
+  position: relative;
+  width: 80%;
+  max-width: 600px;
+  margin: 50px auto;
+  height: 350px;
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+.montage img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: 1.2s;
+}
+
+.montage img.active {
+  opacity: 1;
+}
+
+/* pause button */
+.pause {
+  margin-top: 20px;
+  background: #f472b6;
+}
 </style>
 </head>
 
@@ -477,14 +507,35 @@ section {
       <button onclick="playSong('mulaqat.mp3')">The First One</button>
       <button onclick="playSong('kauntujhe.mp3')">Who Else?</button>
       <button onclick="playSong('dekhahinahi.mp3')">Never Seen One Like You</button>
+
+      <button class="pause" onclick="togglePlay()">Play / Pause</button>
     </div>
 
   </div>
+
+  <!-- Montage -->
+  <div class="montage" id="montage">
+    <img src="image1.jpg">
+    <img src="image2.PNG">
+    <img src="image3.JPG">
+    <img src="image4.JPG">
+    <img src="IMG_5552.jpg">
+    <img src="IMG_6114.jpg">
+    <img src="IMG_7617.jpg">
+    <img src="IMG_7619.jpg">
+    <img src="IMG_7620.jpg">
+    <img src="IMG_8991.JPG.jpg">
+    <img src="lp_image.jpg">
+    <img src="lp_image_2.jpg">
+    <img src="lp_image_3.jpg">
+    <img src="lp_image_4.jpg">
+    <img src="lp_image_5.jpg">
+    <img src="lp_image_6.jpg">
+  </div>
+
 </section>
 
 <audio id="audio"></audio>
-<audio id="player"></audio>
-
 <script>
 /* DAYS COUNTER */
 let startDate = new Date("2024-01-04"); // change this
@@ -587,12 +638,49 @@ let audio = document.getElementById("audio");
 let vinyl = document.getElementById("vinyl");
 let needle = document.getElementById("needle");
 
+let montageImgs = document.querySelectorAll(".montage img");
+let montageIndex = 0;
+let montageInterval;
+
+/* play song */
 function playSong(song) {
   audio.src = song;
   audio.play();
 
   vinyl.style.animationPlayState = "running";
   needle.style.transform = "rotate(5deg)";
+
+  startMontage();
+}
+
+/* play pause */
+function togglePlay() {
+  if (audio.paused) {
+    audio.play();
+    vinyl.style.animationPlayState = "running";
+    needle.style.transform = "rotate(5deg)";
+    startMontage();
+  } else {
+    audio.pause();
+    vinyl.style.animationPlayState = "paused";
+    needle.style.transform = "rotate(-25deg)";
+    clearInterval(montageInterval);
+  }
+}
+
+/* slideshow */
+function startMontage() {
+  clearInterval(montageInterval);
+
+  montageImgs.forEach(img => img.classList.remove("active"));
+  montageImgs[0].classList.add("active");
+  montageIndex = 0;
+
+  montageInterval = setInterval(() => {
+    montageImgs[montageIndex].classList.remove("active");
+    montageIndex = (montageIndex + 1) % montageImgs.length;
+    montageImgs[montageIndex].classList.add("active");
+  }, 3000);
 }
 </script>
 </body>
