--- a/birthday.html
+++ b/birthday.html
@@ -2,64 +2,85 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Birthday ❤️</title>
+<title>Happy Birthday 💜</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
 <style>
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(120deg, #ffd6e0, #e6ccff);
+  height: 100vh;
+  background: radial-gradient(circle at center, #f3e8ff, #c084fc);
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  overflow: hidden;
+}
+
+/* floating glow */
+.glow {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background: radial-gradient(circle, rgba(255,255,255,0.6), transparent);
+  filter: blur(120px);
+  animation: move 10s infinite alternate;
+}
+
+@keyframes move {
+  from { transform: translate(-150px,-100px); }
+  to { transform: translate(150px,100px); }
 }
 
 .container {
-  display: flex;
-  justify-content: center; /* Centers text horizontally */
-  align-items: center;     /* Centers text vertically */
-  height: 300px;           /* Example height for the container */
-  position: relative;      /* Required for positioning the child */
+  text-align: center;
+  z-index: 2;
 }
 
-/* Cake */
+/* cake */
 .cake {
   position: relative;
-  width: 220px;
-  height: 150px;
-  background: #ff99cc;
-  border-radius: 10px;
+  width: 260px;
+  height: 160px;
   margin: auto;
+  background: linear-gradient(120deg,#f9a8d4,#c084fc);
+  border-radius: 20px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+  overflow: hidden;
 }
 
-.layer {
+/* top cream */
+.cake::before {
+  content: "";
   position: absolute;
   width: 100%;
-  height: 40px;
-  background: #ff66b2;
-  bottom: 0;
+  height: 30px;
+  background: #fff;
+  top: 0;
+  border-radius: 20px;
 }
 
+/* candle */
 .candle {
-  width: 10px;
-  height: 40px;
-  background: white;
   position: absolute;
-  top: -40px;
+  width: 14px;
+  height: 50px;
+  background: white;
+  top: -50px;
   left: 50%;
   transform: translateX(-50%);
+  border-radius: 4px;
 }
 
+/* flame */
 .flame {
-  width: 10px;
-  height: 15px;
-  background: orange;
+  width: 14px;
+  height: 18px;
+  background: radial-gradient(circle, yellow, orange);
   border-radius: 50%;
   position: absolute;
-  top: -15px;
-  animation: flicker 0.5s infinite alternate;
+  top: -18px;
+  animation: flicker 0.4s infinite alternate;
 }
 
 @keyframes flicker {
@@ -67,50 +88,68 @@ body {
   to { transform: scale(1.2); }
 }
 
-/* Button */
+/* button */
 button {
   margin-top: 30px;
-  padding: 12px 25px;
-  font-size: 18px;
+  padding: 14px 30px;
   border: none;
-  background: #a64dff;
+  border-radius: 40px;
+  background: linear-gradient(45deg,#a78bfa,#f472b6);
   color: white;
-  border-radius: 8px;
+  font-size: 18px;
   cursor: pointer;
+  box-shadow: 0 10px 30px rgba(167,139,250,0.5);
+  transition: 0.3s;
 }
 
-/* Message */
+button:hover {
+  transform: scale(1.08);
+}
+
+/* message */
 .message {
-  font-size: 35px;
-  color: #5c005c;
+  font-size: 42px;
+  color: #4c1d95;
   margin-top: 30px;
   opacity: 0;
   transition: 1s;
 }
 
-/* Confetti */
+/* confetti */
 .confetti {
   position: fixed;
   width: 8px;
   height: 8px;
-  top: -10px;
   border-radius: 50%;
   animation: fall linear infinite;
 }
 
 @keyframes fall {
-  to { transform: translateY(110vh); }
+  to { transform: translateY(120vh); }
+}
+
+/* sparkle */
+.sparkle {
+  position: fixed;
+  font-size: 18px;
+  animation: float 6s linear infinite;
+}
+
+@keyframes float {
+  to { transform: translateY(-120vh); opacity: 0; }
 }
 </style>
 </head>
 
 <body>
 
+<div class="glow"></div>
+
 <div class="container">
-  <h2>Make a Wish ❤️</h2>
+
+  <h2>Make a Wish 💜</h2>
 
   <div class="cake" id="cake">
-    <div class="layer"></div>
     <div class="candle">
       <div class="flame" id="flame"></div>
     </div>
@@ -118,35 +157,57 @@ button {
 
   <button onclick="blow()">Blow</button>
 
-  <div class="message" id="msg">
-    Happy Birthday Piyu
-  </div>
+  <div class="message" id="msg"></div>
+
 </div>
 
-<script>
-function blow() {
-  /* candle off */
-  document.getElementById("flame").style.display = "none";
+<audio id="bdayMusic" src="birthday.mp3"></audio>
 
-  /* cake cut animation */
-  let cake = document.getElementById("cake");
-  cake.style.transition = "1s";
-  cake.style.transform = "rotateY(180deg)";
+<script>
+function blow(){
+
+  /* candle off */
+  document.getElementById("flame").style.display="none";
+
+  /* cake cut */
+  let cake=document.getElementById("cake");
+  cake.style.transition="1s";
+  cake.style.transform="rotateY(180deg)";
 
   /* confetti */
-  for (let i = 0; i < 150; i++) {
-    let c = document.createElement("div");
-    c.className = "confetti";
-    c.style.left = Math.random() * 100 + "vw";
-    c.style.background = `hsl(${Math.random()*360},100%,70%)`;
-    c.style.animationDuration = (2 + Math.random()*3) + "s";
+  for(let i=0;i<180;i++){
+    let c=document.createElement("div");
+    c.className="confetti";
+    c.style.left=Math.random()*100+"vw";
+    c.style.background=`hsl(${Math.random()*360},100%,70%)`;
+    c.style.animationDuration=(2+Math.random()*3)+"s";
     document.body.appendChild(c);
   }
 
-  /* show message */
-  setTimeout(() => {
-    document.getElementById("msg").style.opacity = "1";
-  }, 1000);
+  /* sparkles */
+  for(let i=0;i<30;i++){
+    let s=document.createElement("div");
+    s.className="sparkle";
+    s.innerHTML="✨";
+    s.style.left=Math.random()*100+"vw";
+    s.style.bottom="-10px";
+    document.body.appendChild(s);
+  }
+
+  /* message typing */
+  let text="Happy Birthday Priyanshi 💜";
+  let i=0;
+  let msg=document.getElementById("msg");
+  msg.style.opacity="1";
+
+  let typing=setInterval(()=>{
+    msg.innerHTML+=text[i];
+    i++;
+    if(i>=text.length) clearInterval(typing);
+  },80);
+
+  /* music */
+  document.getElementById("bdayMusic").play();
 }
 </script>
 
