--- a/birthday.html
+++ b/birthday.html
@@ -138,6 +138,11 @@ button:hover {
 @keyframes float {
   to { transform: translateY(-120vh); opacity: 0; }
 }
+
+  .message {
+  letter-spacing: 2px;
+  font-weight: 500;
+}
 </style>
 </head>
 
